--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="tit">
         
-    <h1>Omar Reda Elshaer</h1>
+    <h1>Omar Elshaer</h1>
     <img src="img/image.png">
     </div>
 
