--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   <body>
 
     <div class="tit">
-        
-    <h1>Omar Elshaer</h1>
-    <img src="img/image.png">
+     <img src="img/image.png">   
+    <h1>Omar Reda Elshaer</h1>
+    
     </div>
 
     <div class="container show-controls">
@@ -58,7 +58,7 @@
                 </li>
             </ul>
         </div>
-        <video src="https://upload.sigma-academy.net/akotb/3/0.mp4"></video>
+        <video class="mainVideo" src="https://upload.sigma-academy.net/akotb/3/020.mp4" >  </video>
     </div>
 
     <script src="script.js"></script>
