--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </li>
             </ul>
         </div>
-        <video class="mainVideo" src="https://upload.sigma-academy.net/akotb/3/020.mp4" >  </video>
+        <video class="mainVideo" src="https://www.youtube.com/watch?v=bVR75wuTM6A" >  </video>
     </div>
 
     <script src="script.js"></script>
