--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </li>
             </ul>
         </div>
-        <video class="mainVideo" src="https://r2---sn-4g5e6nzl.googlevideo.com/videoplayback?expire=1704554253&ei=rRqZZcujMYmR_9EPnuepOA&ip=2607%3A5300%3A60%3A6142%3A313a%3Ac07d%3Aefb1%3A9941&id=o-AOmYu01hmpMWphLxAsu-45HcbXMzEBG206XJJO-YRWZL&itag=22&source=youtube&requiressl=yes&xpc=EgVo2aDSNQ%3D%3D&spc=UWF9f8PNm-3A2RLy1KNAVa8-cyWpIXE&vprv=1&svpuc=1&mime=video%2Fmp4&cnr=14&ratebypass=yes&dur=30.093&lmt=1553454956936916&fexp=24007246&c=ANDROID&txp=5432432&sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cspc%2Cvprv%2Csvpuc%2Cmime%2Ccnr%2Cratebypass%2Cdur%2Clmt&sig=AJfQdSswRQIhALh8b5rA2NBE1lnEc-guVHFh5bBS7S6z8RJHp2Xag6y9AiB-ytCCV5Pa3l6lVqilspOuZ_AfodG-2V14KkOCCEegfw%3D%3D&redirect_counter=1&cm2rm=sn-uxaxjvhxbt2u-5aty7z&req_id=4751b8b9dd4ea3ee&cms_redirect=yes&cmsv=e&mh=Ci&mip=41.34.90.213&mm=29&mn=sn-4g5e6nzl&ms=rdu&mt=1704532378&mv=m&mvi=2&pl=20&lsparams=mh,mip,mm,mn,ms,mv,mvi,pl&lsig=AAO5W4owRQIgEZXIFLCGWS5Y8dyD2S1MseAFSV2ewvYyq_-s_ZCqysECIQCwUnNPKc6kKWUvCihoyf2zhGqiOwA7gVIxAB8y_oxRHA%3D%3D" >  </video>
+        <video class="mainVideo" src="https://upload.sigma-academy.net/akotb/3/021.mp4" >  </video>
     </div>
 
     <script src="script.js"></script>
