--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <video class="mainVideo" src="https://rr5---sn-npobuxa-npoel.googlevideo.com/videoplayback?expire=1704737640&amp;ei=COebZbXFL4KK3LUPjOGQkAQ&amp;ip=116.15.83.211&amp;id=o-AMEEvLOEj2nfyAbAVMIjpNsWjxtfBMNPXEjw9k-pPfR6&amp;itag=18&amp;source=youtube&amp;requiressl=yes&amp;xpc=EgVo2aDSNQ%3D%3D&amp;mh=FX&amp;mm=31%2C29&amp;mn=sn-npobuxa-npoel%2Csn-npoe7nsy&amp;ms=au%2Crdu&amp;mv=m&amp;mvi=5&amp;pcm2cms=yes&amp;pl=24&amp;initcwndbps=1392500&amp;spc=UWF9f33iN7I90YtmdjvMcsQLKXznNQo&amp;vprv=1&amp;svpuc=1&amp;mime=video%2Fmp4&amp;cnr=14&amp;ratebypass=yes&amp;dur=16.300&amp;lmt=1657749797919986&amp;mt=1704715735&amp;fvip=5&amp;fexp=24007246&amp;c=ANDROID&amp;txp=6310224&amp;sparams=expire%2Cei%2Cip%2Cid%2Citag%2Csource%2Crequiressl%2Cxpc%2Cspc%2Cvprv%2Csvpuc%2Cmime%2Ccnr%2Cratebypass%2Cdur%2Clmt&amp;sig=AJfQdSswRQIhAIo9K62yS5K_LnWvpdzZHJss5TWc2ThPc1PtZhorSn5sAiATi-l9AxfIWQmKSAY_bmkMAhIzjBRF-EMd28594-j7rA%3D%3D&amp;lsparams=mh%2Cmm%2Cmn%2Cms%2Cmv%2Cmvi%2Cpcm2cms%2Cpl%2Cinitcwndbps&amp;lsig=AAO5W4owRQIgPco35KaIxgnBSvDpfg80yKCRhl_O8BOHSy2AjSI1Bi4CIQDpR5XFDpyRfSRYaPCvjejj_3l7rTJ4Om3VCYP0nkCivg%3D%3D&amp;title=%D8%B9%D8%A7%D8%AF%D9%84%20%D8%B4%D9%83%D9%84%20%20%D8%AE%D9%88%D8%AF%20%D8%AF%D9%8A.%20%D8%AD%D8%A7%D9%84%D9%87%20%D9%88%D8%A7%D8%AA%D8%B3" >  </video>
     </div>
-
+    <h1> <a href="Sc2.html"> Part2 </a> </h1>
     <script src="script.js"></script>
 
   </body>
