--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 
     <div class="tit">
-     <img src="img/image.png">   
+     <img src="img.png">   
     <h1>Omar Reda Elshaer</h1>
     
     </div>
